--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
 <resources>
 
     <string name="app_name">SingleTune</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
+    <string name="title_section1">Timeline</string>
+    <string name="title_section2">Profile</string>
     <string name="title_section3">Section 3</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">Login</string>
@@ -22,5 +22,7 @@
     <string name="signup_password_mismatch_message">Your password and confirmation do not match</string>
     <string name="login_error_message">Make sure you enter your username and password.</string>
     <string name="action_logout">Logout</string>
+    <string name="login_error_label">Yikes!!!</string>
+    <string name="no_timeline_item_warning">No activities on your Timeline.</string>
 
 </resources>
