--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,8 @@
     <string name="tune_count_label_plural">Tunes</string>
     <string name="friends_count_label_plural">Friends</string>
     <string name="followers_count_label_plural">Followers</string>
+    <string name="search_title">Search</string>
+    <string name="search_hint">Search for Friends</string>
+    <string name="title_activity_search_results">SearchResultsActivity</string>
 
 </resources>
