--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="followers_count_label_plural">Followers</string>
     <string name="search_title">Search</string>
     <string name="search_hint">Search for Friends</string>
-    <string name="title_activity_search_results">SearchResultsActivity</string>
+    <string name="title_activity_search_results">Search</string>
     <string name="title_activity_notifications">NotificationsActivity</string>
     <string name="follow_button_text">Follow</string>
     <string name="username_label">Username</string>
